# discord

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: docker.yml
src/: main.rs  types.rs
src/commands/: anime.rs  mod.rs  ping.rs  wfx.rs
src/utils/: mod.rs  sd.rs  waifu.rs
